# rpl

./: .gitignore  CMakeLists.txt  README.md  install.sh  setup.py
benchmarks/: benchmark.c  benchmark_optimized.c
cmake/: toolchain-aarch64.cmake
docs/: COMPARISON.md  C_API.md  HARDWARE.md  PYTHON_API.md
examples/: Makefile  benchmark_rpi4.py  c_api_demo  c_api_demo.c  complete_training_c.c  dataloader_demo.c  gpu_test.c  mlp_xor.py  simple_nn  simple_nn.c  train_xor.c
include/: rpi_ml.h  rpl.h  rpl.h.new
python/rpl/: __init__.py  core.py  data.py  nn.py  optim.py
src/: conv_winograd.c  gemm_optimized.c  ops_extended.c  probabilistic.c  rpi_ml.c  rpl_activations.c  rpl_attention.c  rpl_core.c  rpl_data.c  rpl_gpu.c  rpl_half.c  rpl_metrics.c  rpl_nn.c  rpl_quantization.c  rpl_rl.c  rpl_sklearn.c  rpl_training.c  rpl_vision.c
tests/: full_system_check.py  test_activations.py  test_api.c  test_gpu_python.py  test_python.py
